# ChangeLog for xfce-base/thunar
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/thunar/ChangeLog,v 1.77 2009/07/27 17:44:23 nixnut Exp $

  27 Jul 2009; nixnut <nixnut@gentoo.org> thunar-1.0.1.ebuild:
  ppc stable #265587

  30 Jun 2009; Tobias Klausmann <klausman@gentoo.org> thunar-1.0.1.ebuild:
  Stable on alpha, bug #265587

  28 Jun 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking thunar-1.0.1 ppc64 stable for bug 265587

  22 Jun 2009; Raúl Porcel <armin76@gentoo.org> ChangeLog:
  arm/ia64 stable wrt #265587

  15 Jun 2009; Jeroen Roovers <jer@gentoo.org> thunar-1.0.1.ebuild:
  Stable for HPPA (bug #265587).

  13 Jun 2009; Tiago Cunha <tcunha@gentoo.org> thunar-1.0.1.ebuild:
  stable sparc, bug 265587

  10 Jun 2009; Christian Faulhammer <fauli@gentoo.org> thunar-1.0.1.ebuild:
  stable x86, bug 265587

  09 Jun 2009; Jeremy Olexa <darkside@gentoo.org> thunar-1.0.1.ebuild:
  amd64 stable, bug 265587

  21 May 2009; Christoph Mende <angelos@gentoo.org> thunar-0.9.3.ebuild,
  thunar-1.0.1.ebuild:
  Fixed license (bug #268796)

*thunar-1.0.1 (21 Apr 2009)

  21 Apr 2009; Jeremy Olexa <darkside@gentoo.org> -thunar-1.0.0.ebuild,
  +thunar-1.0.1.ebuild:
  Version bump for xfce-4.6.1 release, remove old

*thunar-1.0.0 (10 Mar 2009)

  10 Mar 2009; Christoph Mende <angelos@gentoo.org> +thunar-1.0.0.ebuild:
  Xfce-4.6 bump

  05 Feb 2009; Petteri Räty <betelgeuse@gentoo.org> thunar-0.9.3.ebuild:
  EAPI 2 instead of built_with_use. xfce44.eclass is not EAPI 2 aware so
  going with a QA warning about econf in src_compile for now.

  22 Dec 2008; Christoph Mende <angelos@gentoo.org> -thunar-0.9.0-r2.ebuild:
  Removed old

  15 Dec 2008; Jeroen Roovers <jer@gentoo.org> thunar-0.9.3.ebuild:
  Stable for HPPA (bug #249942).

  13 Dec 2008; Raúl Porcel <armin76@gentoo.org> thunar-0.9.3.ebuild:
  alpha/arm/ia64/sparc/x86 stable wrt #249942
