@@ -3,6 +3,6 @@ AUX thunar-0.9.0-missing-audio-cds-for-volman.patch 4220 RMD160 5fa9ff9156fca9df
 DIST Thunar-0.9.3.tar.bz2 6502363 RMD160 cc5c17a2841d5778e4832cc21e620ac351c9c57b SHA1 bb43fbe5ac3af1204517ed88da1cc3e87c5ec688 SHA256 8820d847d908ae96f9f27fae63ea7ebab91d3fc6c8e1a975157978f89c285e8d
 DIST Thunar-1.0.1.tar.bz2 8802672 RMD160 203690b9eb05ca8e5248bb026f98b8e3e6881f2c SHA1 2fcd3a7b0e27b01f059dffc8ffdac94e2b2aa064 SHA256 7a2b6b493463756bbc9c54144fab2f2163bc84f0896b4c06fd225d11025a210d
 EBUILD thunar-0.9.3.ebuild 2065 RMD160 d5d7aae04b44b96e19444d68b8114baaf902a777 SHA1 c610aea2b83ac36e21b8d6d05ab86e83d4976563 SHA256 259065df4fb53388657a4c5f469aab52d7fbe58881daa9e10cf45710a05fd690
-EBUILD thunar-1.0.1.ebuild 1912 RMD160 8257f5c39d075f7f6576c53fe54fa9c93a5bc47e SHA1 60ed13ed6c5902167a4ff68ba962921d4486c65b SHA256 25e2509785d975aa2ed45c36a3d5e6fbc40a854b8e6c803edba8d05d4d2ef69e
-MISC ChangeLog 10407 RMD160 c4ab035ede049b41c68407c1e3ce82e988281967 SHA1 0ac4373c01df74011c4f8e79bdf1438b93543752 SHA256 8b6b77fef80b5c26587fc60cfb1ded763b289e6584adbf5f37ed11a9fb7ed473
+EBUILD thunar-1.0.1.ebuild 1859 RMD160 71d6500e2b5c5abaf26bab7a7bd8f4e22fa568e3 SHA1 ffecb15fb47d21ee0f5c3f0a24c8a03954c98db1 SHA256 89ed5fe74144c095e3c966b9d8780fc41d3a379a05f97378a40870411f069799
+MISC ChangeLog 10507 RMD160 1d2818372368a68610ccc337367730804746e6bd SHA1 f6c4d691e5e4b596f192d69292501700eb8e061e SHA256 fd9f70adf3061c65946fc1cea7b785ccc206e9577ee10200141790f459dda845
 MISC metadata.xml 234 RMD160 5cf371faf236f472c7d98a92d7103c5a96c4d95a SHA1 f028da2a6c812a70d5a6c159a450899a5c8f29a2 SHA256 acb3aa4d6a184bbefb0ae06cbb0ed0416ecd1b87d01cae543365cfc0e330d8cb
