@@ -1,20 +1,17 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/thunar/thunar-1.0.1.ebuild,v 1.10 2009/07/27 17:44:23 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/thunar/thunar-1.0.1.ebuild,v 1.11 2009/08/02 10:37:41 ssuominen Exp $
 
-EAPI="2"
+EAPI=2
+MY_P=${P/t/T}
+inherit virtualx xfconf
 
-MY_PN=${PN/t/T}
-inherit virtualx xfce4
-
-XFCE_VERSION=4.6.1
-
-xfce4_core
-
-DESCRIPTION="File manager"
+DESCRIPTION="File manager for Xfce4"
 HOMEPAGE="http://thunar.xfce.org"
-KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~x86-solaris"
+
 LICENSE="GPL-2 LGPL-2"
+SLOT="0"
+KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~x86-solaris"
 IUSE="dbus debug doc exif gnome hal pcre startup-notification +trash-plugin"
 
 RDEPEND=">=dev-lang/perl-5.6
@@ -28,7 +25,7 @@ RDEPEND=">=dev-lang/perl-5.6
 	x11-libs/libSM
 	>=x11-misc/shared-mime-info-0.20
 	>=xfce-extra/exo-0.3.92[hal?]
-	>=xfce-base/libxfce4util-${XFCE_VERSION}
+	>=xfce-base/libxfce4util-4.6
 	dbus? ( dev-libs/dbus-glib )
 	exif? ( >=media-libs/libexif-0.6 )
 	hal? ( dev-libs/dbus-glib
@@ -37,36 +34,37 @@ RDEPEND=">=dev-lang/perl-5.6
 	pcre? ( >=dev-libs/libpcre-6 )
 	startup-notification? ( x11-libs/startup-notification )
 	trash-plugin? ( dev-libs/dbus-glib
-		>=xfce-base/xfce4-panel-${XFCE_VERSION} )"
+		>=xfce-base/xfce4-panel-4.6 )"
 DEPEND="${RDEPEND}
 	dev-util/intltool
-	doc? ( dev-util/gtk-doc )"
+	dev-util/pkgconfig
+	sys-devel/gettext
+	doc? ( dev-libs/libxslt )"
 
 pkg_setup() {
-	XFCE_CONFIG+="$(use_enable dbus) $(use_enable doc gtk-doc)
-	$(use_enable exif) $(use_enable gnome gnome-thumbnailers)
-	$(use_enable pcre)"
-
-	if use hal && ! use dbus; then
-		ewarn "USE hal detected, enabling dbus."
-	fi
+	XFCONF="--disable-dependency-tracking
+		$(use_enable dbus)
+		$(use_enable gnome gnome-thumbnailers)
+		$(use_enable startup-notification)
+		$(use_enable doc xsltproc)
+		$(use_enable exif)
+		$(use_enable pcre)
+		$(use_enable debug)"
 
 	if use hal; then
-		XFCE_CONFIG+=" --enable-dbus --with-volume-manager=hal"
+		XFCONF="${XFCONF} --enable-dbus --with-volume-manager=hal"
 	else
-		XFCE_CONFIG+=" --with-volume-manager=none"
+		XFCONF="${XFCONF} --with-volume-manager=none"
 	fi
 
-	if use trash-plugin && ! use dbus; then
-		XFCE_CONFIG+=" --enable-dbus"
-		ewarn "USE trash-plugin detected, enabling dbus."
+	if use trash-plugin; then
+		XFCONF="${XFCONF} --enable-dbus"
+	else
+		XFCONF="${XFCONF} --disable-tpa-plugin"
 	fi
-
-	use trash-plugin || XFCE_CONFIG+=" --disable-tpa-plugin"
+	DOCS="AUTHORS ChangeLog FAQ HACKING NEWS README THANKS TODO"
 }
 
 src_test() {
-	Xemake check || die "emake check failed"
+	Xemake check || die "Xemake check failed"
 }
-
-DOCS="AUTHORS ChangeLog FAQ HACKING NEWS README THANKS TODO"
