@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/thunar
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/thunar/ChangeLog,v 1.77 2009/07/27 17:44:23 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/thunar/ChangeLog,v 1.78 2009/08/02 10:37:41 ssuominen Exp $
+
+  02 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> thunar-1.0.1.ebuild:
+  Use xfconf.eclass.
 
   27 Jul 2009; nixnut <nixnut@gentoo.org> thunar-1.0.1.ebuild:
   ppc stable #265587
